# rbau

./: .gitmodules  ReadMe.md
amxd/: rbau.chord.tracker.amxd  springs_default_params.txt  trork.drum-trigger.amxd
docs/: rbau.repitch.maxref.xml  trork.drum-trigger.maxref.xml
help/: rbau.hello-world.maxhelp
javascript/: ChordTracker.js  NoteTracker.js
source/projects/rbau.hello-world/: rbau.hello-world_test.cpp
source/projects/rbau.repitch/: CMakeLists.txt  rbau.repitch.cpp  rbau.repitch_test.cpp
source/projects/trork.drum-trigger/: trork.drum-trigger.cpp  trork.drum-trigger_test.cpp
